update CSS to fix wrapping

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -140,14 +140,17 @@ code, kbd {
   padding: 1px 6px;
   margin: 0 2px;
   font-size: .95rem;
-  white-space: pre-wrap;
-  word-wrap: break-word;
 
   code, kbd {
     background: transparent;
     padding: 0;
     margin: 0;
   }
+}
+
+code {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 pre {
